Datagen and RecipeSerializer CODECs
WIP

Signed-off-by: unilock <unilock@fennet.rentals>